adding some more functionality

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,9 +4,12 @@ login.url = http://localhost:8080/pet-management-system/api/auth/login
 pet.edit.icon = /icons/pawprint.png
 owner.edit.icon = /icons/boss.png
 vaccine.edit.icon = /icons/vaccine.png
+loading.icon = /icons/loading.gif
 
+#Validations
 valid.name.regexp = ^[A-Za-z ]{2,}$
-
 min.name.length = 2
 max.name.length = 16
+pet.max.age = 50
+valid.phone.regexp = ^\\+91[6-9]\\d{9}$|^\\+447\\d{9}$
 
