about to complete

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,10 +6,13 @@ owner.edit.icon = /icons/boss.png
 vaccine.edit.icon = /icons/vaccine.png
 loading.icon = /icons/loading.gif
 
+date.time.format = yyyy-MM-dd HH:mm
 #Validations
 valid.name.regexp = ^[A-Za-z ]{2,}$
 min.name.length = 2
 max.name.length = 16
 pet.max.age = 50
 valid.phone.regexp = ^\\+91[6-9]\\d{9}$|^\\+447\\d{9}$
+valid.date.format.regexp = ^\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}$
+
 
